@@ -1,3 +1,4 @@
+Generic-IBM-Comaptible_Dot_Matrix_Printer Generic-IBM-Compatible_Dot_Matrix_Printer
 100576 HP-LaserJet_4000
 100704 HP-OfficeJet_635
 101152 Panasonic-KX-P2123
