@@ -8,7 +8,7 @@
    <en>Model</en><!-- backends only know <en> shortnames! -->
   </arg_shortname>
   <arg_execution>
-   <arg_group>Miscellaneous</arg_group>
+   <arg_group>InstallableOptions</arg_group>
    <arg_order>100</arg_order>
    <arg_spot>A</arg_spot>
    <arg_required />
