@@ -1,6 +1,6 @@
-<printer id="printer/Generic-IBM-Comaptible_Dot_Matrix_Printer">
+<printer id="printer/Generic-IBM-Compatible_Dot_Matrix_Printer">
   <make>Generic</make>
-  <model>IBM-Comaptible Dot Matrix Printer</model>
+  <model>IBM-Compatible Dot Matrix Printer</model>
   <mechanism>
     <dotmatrix/>
     <color/>
