@@ -1,3 +1,13 @@
+2003-04-23  Till Kamppeter <till.kamppeter@gmx.net>
+
+	* printer/Generic-IBM-Comaptible_Dot_Matrix_Printer.xml,
+	  printer/Generic-IBM-Compatible_Dot_Matrix_Printer.xml,
+	  db/oldprinterids: Fixed typo in printer name and ID.
+
+	* opt/207.xml: Moved "Model" option of "pcl3" driver into
+	  "Installable Options" group, as this has only be to set by the
+	  admin and not by the user.
+
 2003-04-22  Till Kamppeter <till.kamppeter@gmx.net>
 
 	* README, USAGE: Updated for Foomatic 3.0.0rc2 (restrictions for
